# site-analyser

./: .env  LICENSE  New Text Document.txt  README.md  docker-compose.yml  package-lock.json  package.json  project-structure.txt
ai-service/: .env  .env.test  .flake8  .isort.cfg  Dockerfile  main.py  pyproject.toml  requirements.txt
ai-service/app/api/: analyze.py  health.py  routes.py
ai-service/app/core/: config.py  errors.py  logging.py  security.py
ai-service/app/models/anomaly_detection/: Alert.js  isolation_forest.py  training.py
ai-service/app/models/risk_scoring/: scoring_model.py  training.py
ai-service/app/models/threat_detection/: classifier.py  training.py
ai-service/app/schemas/: analysis.py  common.py
ai-service/app/services/: ai_analysis.py  ollama_client.py  threat_intelligence.py
ai-service/app/utils/: formatters.py  validators.py
ai-service/tests/api/: test_analyze.py
ai-service/tests/models/: test_anomaly_detection.py  test_risk_scoring.py
ai-service/tests/services/: test_ai_analysis.py  test_threat_intelligence.py
client/: .dockerignore  .env  .env.development  .env.production  .eslintrc.js  .prettierrc.json  Dockerfile  Dockerfile-dev  migration-script.sh  nginx.conf  nginx.conf.bak  package-lock.json  package.json  validate-migration.js
client/nginx/: default.conf
client/public/: Thumbs.db
client/src/: App.css  App.js  PrivateRoute.js  PrivateRoute_old.js  index.js  reportWebVitals.js  routes.js  theme.js
docker/ai-service/: entrypoint.sh
docker/client/: nginx.conf
docker/server/: entrypoint.sh
kubernates/development/: ai-service-deployment.yaml  client-deployment.yaml  configmap.yaml  kustomization.yaml.txt  mongodb-deployment.yaml  namespace.yaml  ollama-deployment.yaml  regis-deployment.yaml  secrets.yaml  server-deployment.yaml
kubernates/production/: ai-service-deployment.yaml  client-deployment.yaml  configmap.yaml  kustomization.yaml  mongodb-statefulset.yaml  namespace.yaml  ollama-deployment.yaml  redis-statefulset.yaml  secrets.yaml  server-deployment.yaml
server/: .env  .env.test  .eslintrc.js  .prettierrc  Dockerfile  index.js  package-lock.json  package.json
(+155 files in other folders)
